タイトルの変更

--- a/assessment.html
+++ b/assessment.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assessment.css">
-    <title>あなたのいいところ診断</title>
+    <title>yosstnmrが作ったあなたのいいところ診断</title>
 </head>
 <body>
     <h1>あなたのいいところは？</h1>
